--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <main>
         <!--Герой-->
-        <section class="section hero">
-            <h1 class="solutions">Эффективные решения для вашего бизнеса</h1>
+        <section class="hero">
+            <h1 class="solutions">Эффективные решения <br> для вашего бизнеса</h1>
             <input type="button" value="Заказать услугу" class="button">
         </section>
         <!--Преимущества-->
